Fix alignment of third row and images

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .thumbnails {
-    width: 75px;
+    width: 120px;
 }
 body {
     display: flex;
@@ -13,10 +13,45 @@ ul {
     display: flex;
     text-decoration: none;
     list-style: none;
-    gap: 10px;
+    gap: 30px;
     margin-left: auto;
 }
 
 .firstrow {
     display: flex;
+}
+
+.firstimg {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.secondrow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.centerbox{
+    display: flex;
+    gap: 70px;
+}
+.imagebox {
+    width: 120px;
+}
+
+.thirdrow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.quote {
+    max-width: 50%;
+    min-width: 50%;
+}
+#author {
+    text-align: right;
 }
